--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -14,10 +14,10 @@ Size=1707,996
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=543,19
-Size=1164,641
+Pos=856,662
+Size=851,334
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000002,0
 
 [Window][TestPanel1]
 Pos=117,368
@@ -51,15 +51,15 @@ Collapsed=0
 
 [Window][Shader Editor##1]
 Pos=0,19
-Size=541,641
+Size=854,641
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000004,0
 
 [Window][Asset Browser##2]
 Pos=0,662
-Size=1707,334
+Size=854,334
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000001,0
 
 [Window][ContentBrowser]
 Pos=255,197
@@ -67,15 +67,17 @@ Size=825,350
 Collapsed=0
 
 [Window][Scene View##3]
-Pos=543,19
-Size=1164,641
+Pos=856,19
+Size=851,641
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000006,0
 
 [Docking][Data]
 DockSpace     ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=Y NoWindowMenuButton=1
-  DockNode    ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,640 Split=X NoWindowMenuButton=1
-    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=541,640 NoWindowMenuButton=1 Selected=0x47F63A4B
-    DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=1164,640 CentralNode=1 NoWindowMenuButton=1 Selected=0x16610708
-  DockNode    ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,334 NoWindowMenuButton=1 Selected=0x6AB70705
+  DockNode    ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,640 Split=X Selected=0x47F63A4B
+    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=854,641 CentralNode=1 NoWindowMenuButton=1 Selected=0x47F63A4B
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=851,641 NoWindowMenuButton=1 Selected=0x16610708
+  DockNode    ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,334 Split=X Selected=0x6AB70705
+    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=854,334 NoWindowMenuButton=1 Selected=0x6AB70705
+    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=851,334 NoWindowMenuButton=1 Selected=0xE927CF2F
 
