--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="Actor.h">
       <Filter>头文件\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="EditorAssetManger.h">
+      <Filter>头文件\AssetManger</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CoreTest.cpp">
@@ -70,6 +73,9 @@
     </ClCompile>
     <ClCompile Include="Actor.cpp">
       <Filter>源文件\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="EditorAssetManger.cpp">
+      <Filter>源文件\AssetManger</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
