--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -141,13 +141,14 @@
     <ClInclude Include="BrowserItem.h" />
     <ClInclude Include="BrowserItemContextualMenu.h" />
     <ClInclude Include="Context.h" />
-    <ClInclude Include="EditorResourceManger.h" />
     <ClInclude Include="FileItem.h" />
     <ClInclude Include="FileItemContextualMenu.h" />
     <ClInclude Include="FolderItem.h" />
     <ClInclude Include="Editor.h" />
     <ClInclude Include="FolderItemContextualMenu.h" />
     <ClInclude Include="Graph.h" />
+    <ClInclude Include="Hierarchy.h" />
+    <ClInclude Include="HierarchyContextualMenu.h" />
     <ClInclude Include="ISupportUndo.h" />
     <ClInclude Include="Link.h" />
     <ClInclude Include="MainMenuBar.h" />
@@ -171,12 +172,13 @@
     <ClCompile Include="FolderItem.cpp" />
     <ClCompile Include="FolderItemContextualMenu.cpp" />
     <ClCompile Include="Graph.cpp" />
+    <ClCompile Include="Hierarchy.cpp" />
+    <ClCompile Include="HierarchyContextualMenu.cpp" />
     <ClCompile Include="ISupportUndo.cpp" />
     <ClCompile Include="Link.cpp" />
     <ClCompile Include="MainMenuBar.cpp" />
     <ClCompile Include="MathNode.cpp" />
     <ClCompile Include="Node.cpp" />
-    <ClCompile Include="EditorResourceManger.cpp" />
     <ClCompile Include="SceneView.cpp" />
     <ClCompile Include="ShaderEditor.cpp" />
     <ClCompile Include="Pin.cpp" />
