--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -10,12 +10,12 @@ Collapsed=0
 
 [Window][##dockspace]
 Pos=0,0
-Size=32,32
+Size=1707,996
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=17,28
-Size=15,4
+Pos=856,686
+Size=851,310
 Collapsed=0
 DockId=0x00000002,0
 
@@ -50,14 +50,14 @@ Size=1480,913
 Collapsed=0
 
 [Window][Shader Editor##1]
-Pos=0,19
-Size=15,7
+Pos=1329,19
+Size=378,665
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000C,0
 
 [Window][Asset Browser##2]
-Pos=0,28
-Size=15,4
+Pos=0,686
+Size=854,310
 Collapsed=0
 DockId=0x00000001,0
 
@@ -67,17 +67,33 @@ Size=825,350
 Collapsed=0
 
 [Window][Scene View##3]
-Pos=17,19
-Size=15,7
+Pos=0,19
+Size=1116,641
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000004,0
+
+[Window][Hierarchy##3]
+Pos=0,19
+Size=312,665
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Scene View##4]
+Pos=314,19
+Size=1013,665
+Collapsed=0
+DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace     ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=32,13 Split=Y NoWindowMenuButton=1
-  DockNode    ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,640 Split=X NoWindowMenuButton=1 Selected=0x47F63A4B
-    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=630,641 CentralNode=1 NoWindowMenuButton=1 Selected=0x47F63A4B
-    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1075,641 NoWindowMenuButton=1 Selected=0x16610708
-  DockNode    ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,334 Split=X NoWindowMenuButton=1 Selected=0x6AB70705
-    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=854,334 NoWindowMenuButton=1 Selected=0x6AB70705
-    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=851,334 NoWindowMenuButton=1 Selected=0xE927CF2F
+DockSpace         ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=Y NoWindowMenuButton=1
+  DockNode        ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,665 Split=X NoWindowMenuButton=1 Selected=0x47F63A4B
+    DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=1116,641 NoWindowMenuButton=1 Selected=0x16610708
+    DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=589,641 Split=X NoWindowMenuButton=1 Selected=0x47F63A4B
+      DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=312,641 NoWindowMenuButton=1 Selected=0xE269AA3C
+      DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1393,641 Split=X NoWindowMenuButton=1
+        DockNode  ID=0x00000008 Parent=0x0000000B SizeRef=1013,641 NoWindowMenuButton=1 Selected=0x880592AB
+        DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=378,641 CentralNode=1 NoWindowMenuButton=1 Selected=0x47F63A4B
+  DockNode        ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,310 Split=X NoWindowMenuButton=1 Selected=0x6AB70705
+    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=854,334 NoWindowMenuButton=1 Selected=0x6AB70705
+    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=851,334 NoWindowMenuButton=1 Selected=0xE927CF2F
 
