--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Hierarchy.h" />
     <ClInclude Include="HierarchyContextualMenu.h" />
+    <ClInclude Include="HierarchyItem.h" />
     <ClInclude Include="ISupportUndo.h" />
     <ClInclude Include="Link.h" />
     <ClInclude Include="MainMenuBar.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Hierarchy.cpp" />
     <ClCompile Include="HierarchyContextualMenu.cpp" />
+    <ClCompile Include="HierarchyItem.cpp" />
     <ClCompile Include="ISupportUndo.cpp" />
     <ClCompile Include="Link.cpp" />
     <ClCompile Include="MainMenuBar.cpp" />
