--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -14,10 +14,10 @@ Size=1707,996
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=856,686
-Size=851,310
+Pos=856,646
+Size=851,350
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000002,1
 
 [Window][TestPanel1]
 Pos=117,368
@@ -50,14 +50,14 @@ Size=1480,913
 Collapsed=0
 
 [Window][Shader Editor##1]
-Pos=1329,19
-Size=378,665
+Pos=856,646
+Size=851,350
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000002,0
 
 [Window][Asset Browser##2]
-Pos=0,686
-Size=854,310
+Pos=0,646
+Size=854,350
 Collapsed=0
 DockId=0x00000001,0
 
@@ -74,26 +74,32 @@ DockId=0x00000004,0
 
 [Window][Hierarchy##3]
 Pos=0,19
-Size=353,665
+Size=329,625
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Scene View##4]
-Pos=355,19
-Size=972,665
+Pos=331,19
+Size=979,625
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Inspector##5]
+Pos=1312,19
+Size=395,625
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
 DockSpace         ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=Y NoWindowMenuButton=1
-  DockNode        ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,665 Split=X NoWindowMenuButton=1 Selected=0x47F63A4B
+  DockNode        ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,625 Split=X NoWindowMenuButton=1 Selected=0x47F63A4B
     DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=1116,641 NoWindowMenuButton=1 Selected=0x16610708
     DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=589,641 Split=X NoWindowMenuButton=1 Selected=0x47F63A4B
-      DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=353,641 NoWindowMenuButton=1 Selected=0xE269AA3C
-      DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1352,641 Split=X NoWindowMenuButton=1
-        DockNode  ID=0x00000008 Parent=0x0000000B SizeRef=972,641 NoWindowMenuButton=1 Selected=0x880592AB
-        DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=378,641 CentralNode=1 NoWindowMenuButton=1 Selected=0x47F63A4B
-  DockNode        ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,310 Split=X NoWindowMenuButton=1 Selected=0x6AB70705
+      DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=329,641 NoWindowMenuButton=1 Selected=0xE269AA3C
+      DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1376,641 Split=X NoWindowMenuButton=1
+        DockNode  ID=0x00000008 Parent=0x0000000B SizeRef=979,641 NoWindowMenuButton=1 Selected=0x880592AB
+        DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=395,641 CentralNode=1 NoWindowMenuButton=1 Selected=0x83C37F7E
+  DockNode        ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,350 Split=X NoWindowMenuButton=1 Selected=0x6AB70705
     DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=854,334 NoWindowMenuButton=1 Selected=0x6AB70705
     DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=851,334 NoWindowMenuButton=1 Selected=0xE927CF2F
 
